--- a/tools/tournament.html
+++ b/tools/tournament.html
@@ -81,7 +81,7 @@
   <button id="nextRoundBtn">次のラウンドへ</button>
 
   <h2>最終JSON出力</h2>
-  <textarea id="jsonOutput" readonly></textarea>
+  <textarea id="jsonOutput" readonly style="height: 800px;"></textarea>
 
   <script>
     // パッキン用ダミーペア
@@ -326,74 +326,100 @@
     });
 
     // JSON出力更新
-    function updateJsonOutput(roundHistory) {
-      const output = {
-        resultSummary: [],
-        rounds: roundHistory,
-      };
+function updateJsonOutput(roundHistory) {
+  const output = {
+    resultSummary: [],
+    matches: [],
+  };
 
-      const roundCount = roundHistory.length;
-      const resultPairs = new Set();
+  const roundCount = roundHistory.length;
+  const resultPairs = new Set();
 
-      const roundRankings = {};
-      roundRankings[roundCount - 1] = { winner: "優勝", loser: "準優勝" };
-      if (roundCount - 2 >= 0) roundRankings[roundCount - 2] = { loser: "ベスト4" };
-      if (roundCount - 3 >= 0) roundRankings[roundCount - 3] = { loser: "ベスト8" };
+  // ラウンド名変換（例：決勝、準決勝、1回戦など）
+  function getRoundLabel(index, totalRounds) {
+    const roundNames = {
+      1: "決勝",
+      2: "準決勝",
+      3: "準々決勝"
+    };
+    const reverseIndex = totalRounds - index;
+    if (roundNames[reverseIndex]) return roundNames[reverseIndex];
+    return `${index + 1}回戦`;
+  }
 
-      const getPairKey = (info) => info?.information?.map(p => p.playerId).sort().join("-");
-      const getPairArray = (info) => info?.information?.map(p => p.playerId).sort();
+  const roundRankings = {};
+  roundRankings[roundCount - 1] = { winner: "優勝", loser: "準優勝" };
+  if (roundCount - 2 >= 0) roundRankings[roundCount - 2] = { loser: "ベスト4" };
+  if (roundCount - 3 >= 0) roundRankings[roundCount - 3] = { loser: "ベスト8" };
 
-      for (let i = roundCount - 1; i >= 0; i--) {
-        const matches = roundHistory[i];
-        const ranking = roundRankings[i];
-        if (!ranking) continue;
+  const getPairKey = (info) => info?.information?.map(p => p.playerId).sort().join("-");
+  const getPairArray = (info) => info?.information?.map(p => p.playerId).sort();
+  const isValidPair = (arr) => arr.every(id => id !== null && id !== undefined);
 
-        for (const match of matches) {
-          if (!match.p1 || !match.p2 || !match.winner) continue;
+  for (let i = 0; i < roundCount; i++) {
+    const matches = roundHistory[i];
+    const roundLabel = getRoundLabel(i, roundCount);
 
-          const p1Key = getPairKey(match.p1);
-          const p2Key = getPairKey(match.p2);
-          const p1Array = getPairArray(match.p1);
-          const p2Array = getPairArray(match.p2);
-          if (!p1Key || !p2Key) continue;
-
-          // nullが含まれるペアは除外
-          const isValidPair = (arr) => arr.every(id => id !== null && id !== undefined);
-
-          const isP1Winner = match.winner === match.p1.id;
-          const winnerKey = isP1Winner ? p1Key : p2Key;
-          const loserKey = isP1Winner ? p2Key : p1Key;
-          const winnerArray = isP1Winner ? p1Array : p2Array;
-          const loserArray = isP1Winner ? p2Array : p1Array;
-
-          if (ranking.winner && !resultPairs.has(winnerKey) && isValidPair(winnerArray)) {
-            output.resultSummary.push({
-              pair: winnerArray,
-              finalRound: ranking.winner,
-            });
-            resultPairs.add(winnerKey);
-          }
-          if (ranking.loser && !resultPairs.has(loserKey) && isValidPair(loserArray)) {
-            output.resultSummary.push({
-              pair: loserArray,
-              finalRound: ranking.loser,
-            });
-            resultPairs.add(loserKey);
-          }
-
-          if (!ranking.winner && ranking.loser && !resultPairs.has(loserKey) && isValidPair(loserArray)) {
-            output.resultSummary.push({
-              pair: loserArray,
-              finalRound: ranking.loser,
-            });
-            resultPairs.add(loserKey);
-          }
-        }
-      }
-
-      document.getElementById("jsonOutput").value = JSON.stringify(output, null, 2);
+    for (const match of matches) {
+      // クローンして round ラベルを追加
+      const matchWithRound = JSON.parse(JSON.stringify(match));
+      matchWithRound.round = roundLabel;
+      output.matches.push(matchWithRound);
     }
+  }
 
+  // resultSummary 生成（上から下へ）
+  for (let i = roundCount - 1; i >= 0; i--) {
+    const matches = roundHistory[i];
+    const ranking = roundRankings[i];
+    if (!ranking) continue;
+
+    for (const match of matches) {
+      if (!match.p1 || !match.p2 || !match.winner) continue;
+
+      const p1Key = getPairKey(match.p1);
+      const p2Key = getPairKey(match.p2);
+      const p1Array = getPairArray(match.p1);
+      const p2Array = getPairArray(match.p2);
+      if (!p1Key || !p2Key) continue;
+
+      const isP1Winner = match.winner === match.p1.id;
+      const winnerKey = isP1Winner ? p1Key : p2Key;
+      const loserKey = isP1Winner ? p2Key : p1Key;
+      const winnerArray = isP1Winner ? p1Array : p2Array;
+      const loserArray = isP1Winner ? p2Array : p1Array;
+
+      if (ranking.winner && !resultPairs.has(winnerKey) && isValidPair(winnerArray)) {
+        output.resultSummary.push({
+          pair: winnerArray,
+          finalRound: ranking.winner,
+        });
+        resultPairs.add(winnerKey);
+      }
+      if (ranking.loser && !resultPairs.has(loserKey) && isValidPair(loserArray)) {
+        output.resultSummary.push({
+          pair: loserArray,
+          finalRound: ranking.loser,
+        });
+        resultPairs.add(loserKey);
+      }
+    }
+  }
+
+  document.getElementById("jsonOutput").value = JSON.stringify(output, null, 2);
+}
+
+
+function getRoundLabel(index, totalRounds) {
+  const roundNames = {
+    1: "決勝",
+    2: "準決勝",
+    3: "準々決勝"
+  };
+  const reverseIndex = totalRounds - index;
+  if (roundNames[reverseIndex]) return roundNames[reverseIndex];
+  return `${index + 1}回戦`;
+}
 
     // 初期表示
     displayMatches();
